@@ -16,6 +16,11 @@ Version 1.4.11 - ???
   the opening or closing delimiters.  Found while working with
   dfinnie on GHOP Task #277, thanks!
 
+- Added matchOnlyAtCol helper parser action, to simplify 
+  parsing log or data files that have optional fields that are
+  column dependent.  Inspired by a discussion thread with 
+  Hubritic on comp.lang.python.
+
 
 Version 1.4.10 - December 9, 2007
 ---------------------------------
